--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,11 @@ spring.jpa.show-sql=true
 spring.jpa.properties.format_sql=true
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3307/sistema_de_autoria
+spring.datasource.url=jdbc:mysql://localhost:3306/sistema_de_autoria
 spring.datasource.username=root
 spring.datasource.password=alunofatec
+
+tmdbApi=ec5b38eb9f18a28e8b8bfcd1b6944d6d
+translateApi=AlzaSyB7uE3ayPN2alcXww27OneBhG-mbN1HYUY
 
 spring.flyway.baseline-on-migrate = true
